<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#ff4547ff" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="70dp"
        android:background="#F08C35"
        android:onClick="media_streamer"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/button"
        android:layout_marginTop="5dp"
        android:onClick="super_duo1"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/button2"
        android:layout_marginTop="5dp"
        android:onClick="super_duo2"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="ant_terminator"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4"
        android:layout_marginTop="5dp"
        android:onClick="materialize"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="capstone"
        android:background="#ffff1729" />

</RelativeLayout>
